Reorganize configuration and code.

--- a/sexbound.config
+++ b/sexbound.config
@@ -122,6 +122,12 @@
     /* Affects the chance to become pregnant for this entity (75% chance) */
     "fertility" : 0.75,
   
+    /* Toggles the pregnancy of other characters to be shown. */
+    "showPregnantOther" : true,
+  
+    /* Toggles the pregnancy of the player to be shown. */
+    "showPregnantPlayer" : true,
+  
     /* Three trimesters in a pregnancy */
     "trimesterCount" : 3,
   
